Refactor for DB changes
- Support DB changes that got rid of the guid column and converted
  the id column to UUID.
- Get rid of cadence13.api.common (for now) to simplify the code
- Move some DB specific logic out of the controller into a models
  submodule

Implements WEB-283
