# src/cadence13/api/showtime/controller/episode.py
@@ -1,6 +1,0 @@
-from flask_jwt_extended import jwt_required
-
-
-@jwt_required
-def update_episode():
-    return 'Not implemented', 501
